# SlicerNeedleSegmentationModule

./: .gitignore  CMakeLists.txt  README.md  StaticNeedleSegmentation.py  python.gitignore
StaticNeedleSegmentation/: CMakeLists.txt  StaticNeedleSegmentation.py  inputImage.mhd
